# cherimoya

./: .gitignore  README.md  pyproject.toml  setup.py
cherimoya/: cherimoya.py  losses.py  performance.py
cli/: cherimoya
docs/: CHANGELOG.rst  architecture.rst  conf.py  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: io.rst  losses.rst  model.rst  performance.rst
docs/tutorials/: attribution.rst  cli_pipeline.rst  python_api.rst
